# Stock-App

./: README.md  pyproject.toml
.github/workflows/: ci.yml
stock/: hooks.py  modules.txt
